--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express": "^4.19.2",
     "typescript": "^5.5.4",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.4.0"
   }
 }
