--- a/.gitignore
+++ b/.gitignore
@@ -119,5 +119,8 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+# backend javascript files
+backend/**/*.js
+
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Node
 
