--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx tsc .\\backend\\BetEngine.ts && node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.4",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "typescript": "^5.5.4",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^22.4.0"
+    "@types/node": "^22.4.0",
+    "typescript": "^5.5.4"
   }
 }
